# ai-tts

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/context/0-api/: 01-quickstart.md  02-python.md  03-javascript.md  04-streaming.md  05-chat-with-voice.md  06-operations.md  README.md
docs/features/0-chunks/: CHECKLIST.md
piper_sandbox/: __init__.py  api.py  chunks.py  config.py  engine.py  gui.py  models.py  wyoming.py
tests/: test_chunks.py  test_gui_html.py
